<resources>
    <string name="app_name">Wake Up Thailand</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="or_sign_in_with_google">or sign in with</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="web_client_id">918024319393-q1uvlrin5lf7jcp56ghrblcf0kstv63m.apps.googleusercontent.com</string>

    <string name="title_activity_drive_mode">Drive Mode</string>
    <string name="drive_mode_exit_warning_title">Exit Drive Mode</string>
    <string name="drive_mode_exit_warning_text">Are you sure you want to exit drive mode?</string>

    <string name="logout_warning_title">Logout</string>
    <string name="logout_warning_text">Are you sure you want to logout?</string>

    <string name="preference_file_key">com.knottycode.DriveSafe</string>
    <string name="adaptive_loudness_key">adaptive_loudness</string>
    <string name="adaptive_checkpoint_frequency_key">adaptive_checkpoint_frequency</string>
    <string name="checkpoint_frequency_key">checkpoint_frequency</string>
    <string name="alarm_tones_key">alarm_tones</string>
    <string name="alert_style_key">alert_style</string>
    <string name="onboarding_complete_key">onboarding_complete</string>
    <string name="tutorial_complete_key">tutorial_complete</string>
    <string name="tutorial_id_key">tutorial_id</string>
    <string name="question_types_key">question_types</string>
    <string name="tip_index_key">tip_index</string>

    <string name="wake_up_intro1">This app periodically asks you questions to energize your brain and wake you up during your drive.</string>
    <string name="wake_up_intro2">Answer each question with your voice after the beep under the time limit to earn points.</string>
    <string name="wake_up_intro3">If you don\'t answer anything, the app will play loud alarm sound to wake you up. Touch the screen to stop the alarm.</string>
    <string name="wake_up_intro4">Please use bluetooth headset and turn down music volume, so that the app can hear your voice better.</string>

    <string name="checkpoint_frequency_tutorial">This shows the pause time between questions. Click it to change question frequency.</string>
    <string name="settings_button_tutorial">Click the settings button for options, including question frequency, question types, and alarm tone selection</string>
    <string name="drive_button_tutorial">To start driving, simply click the start button.</string>

    <string name="checkpoint_frequency_menu_title">Set Question Frequency (s)</string>
    <string name="alert_style_menu_title">Select Alert Style</string>
    <string name="record_new_tone_menu_title">Record a new alarm</string>
    <string name="recorded_tone_display_name">Your recording</string>
    <string name="logout_menu_title">Logout</string>
    <string name="select_question_type_label">Select question types</string>
    <string name="history_menu_title">History</string>

    <string name="time_until_next_checkpoint">Time until next question</string>
    <string name="time_until_alarm">Time until alarm</string>
    <string name="time_in_drive_mode">Time in drive mode</string>
    <string name="please_touch_to_stop_alarm">Touch screen to silence alarm</string>
    <string name="touch_screen_for_question">Touch screen to activate next question</string>

    <string name="drive_mode">Drive</string>
    <string name="setting_mode">Settings</string>

    <string name="setting_checkpoint_title">Checkpoint</string>
    <string name="setting_checkpoint_frequency">Frequency</string>
    <string name="setting_checkpoint_adaptive">Adaptive</string>
    <string name="setting_checkpoint_alert_style">Alert style</string>
    <string name="setting_checkpoint_alert_style_screen">Screen only</string>
    <string name="setting_checkpoint_alert_style_vibrate">Vibration</string>
    <string name="setting_checkpoint_alert_style_sound">Sound</string>

    <string name="setting_alarm_title">Alarm</string>
    <string name="setting_alarm_tones">Choose tones</string>
    <string name="tone_text_singular">tone</string>
    <string name="tone_text_plural">tones</string>
    <string name="type_text_singular">types</string>
    <string name="type_text_plural">types</string>
    <string name="setting_alarm_adaptive_loudness">Adaptive loudness</string>

    <string name="seconds_abbrev">secs</string>
    <string name="seconds">seconds</string>
    <string name="minutes">mins</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="zero_tone_warning">Must select at least one tone</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="skip">Skip tutorial</string>
    <string name="got_it">Got it</string>
    <string name="zero_question_type_warning">Must select at least one question type</string>

    <string name="tone_best_wake_up_sound">Wake Me Up</string>
    <string name="tone_car_alarm">Car Alarm</string>
    <string name="tone_emergency_alert">Emergency Emergency!</string>
    <string name="tone_fore_truck_siren">Siren</string>
    <string name="tone_funny_alarm">Alarm Clocks</string>
    <string name="tone_pager_tone">Beeps</string>
    <string name="tone_rooster_alarm">Rooster</string>

    <string name="checkpoint_frequency_label">Question frequency</string>

    <string name="fun_question_preamble">คำถามกวนๆ</string>
    <string name="riddle_preamble">ปัญหาเชาว์</string>
    <string name="trivia_preamble">คำถามความรู้รอบตัว</string>
    <string name="math_question_preamble">คำถามคณิตศาสตร์</string>
    <string name="other_question_preamble">คำถามทั่วไป</string>
    <string name="science_question_preamble">คำถามวิทยาศาสตร์</string>
    <string name="sports_question_preamble">คำถามกีฬา</string>
    <string name="songs_question_preamble">คำถามเพลง</string>

    <string name="fun_question_name">Fun questions</string>
    <string name="riddle_name">Riddles</string>
    <string name="trivia_name">Trivia</string>
    <string name="math_question_name">Math questions</string>
    <string name="other_question_name">General questions</string>
    <string name="science_question_name">Science questions</string>
    <string name="sports_question_name">Sports questions</string>
    <string name="songs_question_name">Song questions</string>

    <string name="score_preamble">คุณมี</string>
    <string name="score_unit">คะแนน</string>
    <string name="score_ending">แล้ว</string>

    <string name="unable_to_save_stats">Unable to save trip stats</string>

    <string name="thai_tts_not_supported">This app requires a Thai text-to-speech engine, but this device does not support it</string>
    <string name="please_update_tts_app">Please update Google Text-to-speech to the latest version</string>
    <string name="update_tts_app_button_label">Update now</string>
    <string name="please_select_google_tts_engine">Please make sure Google text-to-speech is selected as default engine</string>
    <string name="select_google_tts_engine_button_label">Open settings now</string>

    <string name="loading_history">Loading history...please wait</string>
    <string name="login_loading_message">Loading...please wait</string>
    <string name="score">Score</string>
    <string name="duration">Duration</string>
    <string name="total_trips">Total usage</string>
    <string name="trip_unit">trip</string>
    <string name="max_score">best score</string>
    <string name="score_unit_display">points</string>
    <string name="total_duration">Total duration</string>
    <string name="duration_unit">seconds</string>

    <string name="loading_question_please_wait">Preparing a question, please wait...</string>
    <string name="no_asr_result">(cannot understand)</string>
</resources>
