<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:id="@+id/loginEmailRow">
        <ImageView
            android:src="@drawable/email_icon"
            style="@style/LoginTextBoxIcon" />
        <EditText
            android:background="@drawable/login_textbox_definition"
            android:id="@+id/emailField"
            style="@style/LoginTextBox"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:layout_alignLeft="@+id/loginEmailRow"
        android:layout_below="@+id/loginEmailRow"
        android:id="@+id/loginPasswordRow">
        <ImageView
            android:src="@drawable/password_icon"
            style="@style/LoginTextBoxIcon" />
        <EditText
            android:background="@drawable/login_textbox_definition"
            android:id="@+id/passwordField"
            style="@style/LoginTextBox"
            android:inputType="textPassword"
            android:hint="@string/password_hint" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <ImageButton
        android:background="@drawable/signup_button_definition"
        android:id="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginPasswordRow"
        android:text="@string/sign_up_button_label" />

</RelativeLayout>