<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:id="@+id/loginEmailRow">
        <ImageView
            android:src="@drawable/email_icon"
            style="@style/LoginTextBoxIcon" />
        <EditText
            android:background="@drawable/login_textbox_definition"
            android:id="@+id/emailField"
            style="@style/LoginTextBox"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/loginEmailRow"
        android:id="@+id/loginPasswordRow">
        <ImageView
            android:src="@drawable/password_icon"
            style="@style/LoginTextBoxIcon" />
        <EditText
            android:background="@drawable/login_textbox_definition"
            android:id="@+id/passwordField"
            style="@style/LoginTextBox"
            android:inputType="textPassword"
            android:hint="@string/password_hint" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <ImageButton
        android:background="@drawable/login_button_definition"
        android:id="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginPasswordRow"
        android:text="@string/login_button_label" />

    <ImageButton
        android:background="@drawable/google_signin_button_definition"
        android:id="@+id/googleSigninButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/orSignInWithGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/orSignInWithGoogle"
        android:layout_below="@+id/loginButton"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <View android:background="#ffffff"
            android:layout_width = "100dp"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/orSignInWithGoogleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/signUpText"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/or_sign_in_with_google" />
        <View android:background="#ffffff"
            android:layout_width = "100dp"
            android:layout_height="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/googleSigninButton"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:text="Don't have an account?"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:text="@string/sign_up_text" />
    </LinearLayout>

</RelativeLayout>